fixing input alignment

--- a/src/styles.css
+++ b/src/styles.css
@@ -35,7 +35,9 @@
 }
 
 .usrTxt {
-  width: 50%;
+  text-align: center;
+  width: 100%;
+  max-width: 200px;
   height: 50px;
   font-size: x-large;
   border: 4px solid blue;
